# car-backend

./: .env.example  .gitignore  alembic.ini  check.py  connector_sdk.py  list_users.py  main.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run_tests.py  seed_admin.py
alembic/: env.py
app/: main.py  middleware.py
app/api/: api_keys.py  audits.py  auth.py  badge.py  chat.py  connectors.py  dashboard.py  dependencies.py  documents.py  frameworks.py  notifications.py  rag.py  router.py  rules.py  scheduled_audits.py  users.py  webhooks.py
app/connectors/: __init__.py  google_drive.py  sql_connector.py  whatsapp.py
app/core/: config.py  crypto.py  framework_loader.py  llm_router.py  pii_scanner.py  rag_engine.py  rules_engine.py  security.py
app/core/frameworks/: cbn_framework.json  gaid_2025.json  ncc_framework.json  ndpa_2023.json
app/db/: init_db.py  schema_compat.py  seeder.py  session.py
app/models/: database.py
app/schemas/: schemas.py
app/services/: ai_monitor.py  audit_processor.py  doc_generator.py  document_analysis.py  entity_verification.py  filing_service.py  fix_generator.py  notification_service.py  pii_inventory.py  report_generator.py  scheduler_service.py  storage.py
tests/: __init__.py  conftest.py  test_api_keys.py  test_audits.py  test_auth.py  test_chat.py  test_connectors.py  test_db_conn.py  test_filing.py  test_frameworks.py  test_gemini.py  test_health.py  test_rag.py  test_scheduled_audits.py  test_users.py  test_webhooks.py  verify_flow.py
