[tool.poetry]
name = "car-backend"
version = "0.1.0"
description = "CAR Backend API"
python = "^3.12"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.0"
uvicorn = {extras = ["standard"], version = "0.30.0"}
sqlalchemy = "2.0.35"
alembic = "1.13.0"
asyncpg = "0.29.0"
psycopg = {extras = ["binary"], version = "3.2.0"}
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-multipart = "0.0.9"
pydantic = "2.9.0"
pydantic-settings = "2.5.0"
httpx = "0.27.0"
reportlab = "4.2.0"
cryptography = "41.0.0"
requests = "2.31.0"
google-generativeai = "0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"