[tool.poetry]
name = "car-backend"
version = "0.1.0"
description = "CAR Backend API"
python = "^3.12"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.0"
uvicorn = {extras = ["standard"], version = "0.30.0"}
sqlalchemy = "2.0.35"
alembic = "1.13.0"
asyncpg = "0.29.0"
psycopg = {extras = ["binary"], version = "3.2.0"}
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-multipart = "0.0.9"
pydantic = "2.9.0"
pydantic-settings = "2.5.0"
httpx = "0.27.0"
reportlab = "4.2.0"
cryptography = "41.0.0"
requests = "2.31.0"
google-genai = "1.33.0"
google-api-core = "2.25.1"
protobuf = "5.29.5"
apscheduler = "3.10.4"
resend = "2.4.0"
sentence-transformers = "3.0.1"
chromadb = "0.5.5"
pypdf = "4.3.1"
pdfplumber = "0.11.4"
huggingface-hub = "0.24.7"
transformers = "4.44.2"
accelerate = "0.34.2"
torch = "2.4.1"
evidently = "0.4.38"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
